# vibespace

./: .gitignore  .staticcheck.conf  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  THIRD-PARTY-NOTICES  cliff.toml  codecov.yml  config.sample.yaml  go.mod  go.sum  install.sh
.claude/: claude.md
.github/: dependabot.yml  pull_request_template.md
api/: .env.example  .gitignore  README.md  go.mod  go.sum
app/: .depcheckrc.json  index.html  knip.config.ts  package-lock.json  package.json  tailwind.config.js  tauri-dev.sh  vitest.config.ts
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
app/src-tauri/binaries/: .gitignore  README.md  download-kubectl.sh  download-mkcert.sh  kubectl-darwin-amd64-aarch64-apple-darwin  kubectl-darwin-arm64-aarch64-apple-darwin  kubectl-linux-amd64-aarch64-apple-darwin  kubectl-linux-arm64-aarch64-apple-darwin  portfwd-darwin-amd64-aarch64-apple-darwin  portfwd-darwin-arm64-aarch64-apple-darwin
app/src-tauri/binaries/linux/: download.sh
app/src-tauri/binaries/macos/: download.sh
app/src-tauri/binaries/macos/lima-dist/share/man/man1/: limactl-clone.1  limactl-completion-bash.1  limactl-completion-fish.1  limactl-completion-powershell.1  limactl-completion-zsh.1  limactl-completion.1  limactl-copy.1  limactl-create.1  limactl-delete.1  limactl-disk-create.1  limactl-disk-delete.1  limactl-disk-import.1  limactl-disk-list.1  limactl-disk-resize.1  limactl-disk-unlock.1  limactl-disk.1  limactl-edit.1  limactl-factory-reset.1  limactl-info.1  limactl-list.1  limactl-network-create.1  limactl-network-delete.1  limactl-network-list.1  limactl-network.1  limactl-protect.1  limactl-prune.1  limactl-restart.1  limactl-shell.1  limactl-show-ssh.1  limactl-snapshot-apply.1  limactl-snapshot-create.1  limactl-snapshot-delete.1  limactl-snapshot-list.1  limactl-snapshot.1  limactl-start-at-login.1  limactl-start.1  limactl-stop.1  limactl-sudoers.1  limactl-tunnel.1  limactl-unprotect.1  (+2 more)
app/src-tauri/binaries/portfwd/: build.sh  main.go
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: dns_manager.rs  k8s_manager.rs  main.rs  tests.rs
docs/: CLI_COMMANDS.md  CLI_DESIGN_V2.md  CLI_PIVOT_PLAN.md  CLI_SPEC.md  CLI_STATUS.md  CLI_V2_MIGRATION.md  CONTRIBUTING.md  DAEMON_TESTING.md  DEPENDENCIES.md  IDEAS.md  ROADMAP.md  SPEC.md  STATUS.md  TESTING_BUGS.txt  TESTING_PLAN.md  agents.md  blueprints.md  changelog.md  cli-reference.md  cloud-deployment.md  concepts.md  config-test-plan.md  roadmap.md  (+9 more)
(+453 files in other folders)
