[package]
name = "workspace"
version = "0.1.0"
description = "Local Kubernetes workspace manager with AI agent integration"
authors = ["Workspace Contributors"]
license = "MIT"
repository = "https://github.com/yagizdagabak/workspaces"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# Credential management
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

# SSH key generation
ssh-key = { version = "0.6", features = ["ed25519", "rsa"] }

# File system operations
dirs = "5.0"
fs_extra = "1.3"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
